<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/ic_tealbluebackground">

    <TextView
        android:id="@+id/monitor"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/key_clear_all"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="15dp"
        android:textSize="@dimen/result_size"
        android:text="000"
        android:gravity="right|bottom"
        android:padding="@dimen/default_padding"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/key_clear_all"
        android:layout_width="@dimen/default_button_size"
        android:layout_height="@dimen/default_button_size"
        app:layout_constraintTop_toBottomOf="@+id/monitor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/key_clear"
        android:text="@string/key_clear_all"/>
    <Button
        android:id="@+id/key_clear"
        android:layout_width="@dimen/default_button_size"
        android:layout_height="@dimen/default_button_size"
        app:layout_constraintTop_toBottomOf="@+id/monitor"
        app:layout_constraintLeft_toRightOf="@id/key_clear_all"
        app:layout_constraintRight_toLeftOf="@id/key_percent"
        android:text="@string/key_clear"/>
    <Button
        android:id="@+id/key_percent"
        android:layout_width="@dimen/default_button_size"
        android:layout_height="@dimen/default_button_size"
        app:layout_constraintTop_toBottomOf="@+id/monitor"
        app:layout_constraintLeft_toRightOf="@id/key_clear"
        app:layout_constraintRight_toLeftOf="@id/key_divide"
        android:text="@string/key_percent"/>
    <Button
        android:id="@+id/key_divide"
        android:layout_width="@dimen/default_button_size"
        android:layout_height="@dimen/default_button_size"
        app:layout_constraintTop_toBottomOf="@+id/monitor"
        app:layout_constraintLeft_toRightOf="@id/key_percent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/key_divide"/>
    <Button
        android:id="@+id/key_7"
        android:layout_width="@dimen/default_button_size"
        android:layout_height="@dimen/default_button_size"
        app:layout_constraintTop_toBottomOf="@+id/key_clear_all"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/key_8"
        android:text="@string/key_7"/>
    <Button
        android:id="@+id/key_8"
        android:layout_width="@dimen/default_button_size"
        android:layout_height="@dimen/default_button_size"
        app:layout_constraintTop_toBottomOf="@+id/key_clear_all"
        app:layout_constraintLeft_toRightOf="@id/key_7"
        app:layout_constraintRight_toLeftOf="@id/key_9"
        android:text="@string/key_8"/>
    <Button
        android:id="@+id/key_9"
        android:layout_width="@dimen/default_button_size"
        android:layout_height="@dimen/default_button_size"
        app:layout_constraintTop_toBottomOf="@+id/key_clear_all"
        app:layout_constraintLeft_toRightOf="@id/key_8"
        app:layout_constraintRight_toLeftOf="@id/key_multiply"
        android:text="@string/key_9"/>
    <Button
        android:id="@+id/key_multiply"
        android:layout_width="@dimen/default_button_size"
        android:layout_height="@dimen/default_button_size"
        app:layout_constraintTop_toBottomOf="@+id/key_clear_all"
        app:layout_constraintLeft_toRightOf="@id/key_9"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/key_multiply"/>
    <Button
        android:id="@+id/key_4"
        android:layout_width="@dimen/default_button_size"
        android:layout_height="@dimen/default_button_size"
        app:layout_constraintTop_toBottomOf="@+id/key_7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/key_5"
        android:text="@string/key_4"/>
    <Button
        android:id="@+id/key_5"
        android:layout_width="@dimen/default_button_size"
        android:layout_height="@dimen/default_button_size"
        app:layout_constraintTop_toBottomOf="@+id/key_7"
        app:layout_constraintLeft_toRightOf="@id/key_4"
        app:layout_constraintRight_toLeftOf="@id/key_6"
        android:text="@string/key_5"/>
    <Button
        android:id="@+id/key_6"
        android:layout_width="@dimen/default_button_size"
        android:layout_height="@dimen/default_button_size"
        app:layout_constraintTop_toBottomOf="@+id/key_7"
        app:layout_constraintLeft_toRightOf="@id/key_5"
        app:layout_constraintRight_toLeftOf="@id/key_minus"
        android:text="@string/key_6"/>
    <Button
        android:id="@+id/key_minus"
        android:layout_width="@dimen/default_button_size"
        android:layout_height="@dimen/default_button_size"
        app:layout_constraintTop_toBottomOf="@+id/key_7"
        app:layout_constraintLeft_toRightOf="@id/key_6"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/key_minus"/>
    <Button
        android:id="@+id/key_1"
        android:layout_width="@dimen/default_button_size"
        android:layout_height="@dimen/default_button_size"
        app:layout_constraintTop_toBottomOf="@+id/key_4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/key_2"
        android:text="@string/key_1"/>
    <Button
        android:id="@+id/key_2"
        android:layout_width="@dimen/default_button_size"
        android:layout_height="@dimen/default_button_size"
        app:layout_constraintTop_toBottomOf="@+id/key_4"
        app:layout_constraintLeft_toRightOf="@id/key_1"
        app:layout_constraintRight_toLeftOf="@id/key_3"
        android:text="@string/key_2"/>
    <Button
        android:id="@+id/key_3"
        android:layout_width="@dimen/default_button_size"
        android:layout_height="@dimen/default_button_size"
        app:layout_constraintTop_toBottomOf="@+id/key_4"
        app:layout_constraintLeft_toRightOf="@id/key_2"
        app:layout_constraintRight_toLeftOf="@id/key_plus"
        android:text="@string/key_3"/>
    <Button
        android:id="@+id/key_plus"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:layout_constraintTop_toBottomOf="@+id/key_4"
        app:layout_constraintLeft_toRightOf="@id/key_3"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/key_plus"/>
    <Button
        android:id="@+id/key_expand"
        android:layout_width="@dimen/default_button_size"
        android:layout_height="@dimen/default_button_size"
        app:layout_constraintTop_toBottomOf="@+id/key_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/key_0"
        android:text="@string/key_expand"/>
    <Button
        android:id="@+id/key_0"
        android:layout_width="@dimen/default_button_size"
        android:layout_height="@dimen/default_button_size"
        app:layout_constraintTop_toBottomOf="@+id/key_1"
        app:layout_constraintLeft_toRightOf="@id/key_expand"
        app:layout_constraintRight_toLeftOf="@id/key_dot"
        android:text="@string/key_0"/>
    <Button
        android:id="@+id/key_dot"
        android:layout_width="@dimen/default_button_size"
        android:layout_height="@dimen/default_button_size"
        app:layout_constraintTop_toBottomOf="@+id/key_1"
        app:layout_constraintLeft_toRightOf="@id/key_0"
        app:layout_constraintRight_toLeftOf="@id/key_equals"
        android:text="@string/key_dot"/>
    <Button
        android:id="@+id/key_equals"
        android:layout_width="@dimen/default_button_size"
        android:layout_height="@dimen/default_button_size"
        app:layout_constraintTop_toBottomOf="@+id/key_1"
        app:layout_constraintLeft_toRightOf="@id/key_dot"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/key_equals"/>

</androidx.constraintlayout.widget.ConstraintLayout>